--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation 'com.twofortyfouram:android-plugin-client-sdk-for-locale:4.0.3'
     annotationProcessor 'org.projectlombok:lombok:1.16.12'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
+
 }
 
 android {
